--- a/admin/.env.development
+++ b/admin/.env.development
@@ -5,4 +5,6 @@ ENV = 'development'
 VUE_APP_BASE_API = '/api'
 
 # base host
-VUE_APP_BASE_HOST = 'http://modern-app-new.modern-app-new.1611387345152601.cn-hangzhou.fc.devsapp.net/'
+VUE_APP_BASE_HOST = 'http://localhost:3000/'
+
+#'http://modern-app-new.modern-app-new.1611387345152601.cn-hangzhou.fc.devsapp.net/'
