--- a/s.yaml
+++ b/s.yaml
@@ -35,7 +35,7 @@ services:
       post-deploy: # 在deploy之后运行
       - plugin: keep-warm-fc
         args:
-          url: http://modern-app-new.modern-app-new.1611387345152601.cn-hangzhou.fc.devsapp.net
+          url: http://modern-app-new.modern-app-new.xxxxxx.cn-hangzhou.fc.devsapp.net
     # actions:
     #   post-deploy:
     #     - component: fc nas upload -r ./server/logs /mnt/auto/modern-app-new
