--- a/temp.s.yaml
+++ b/temp.s.yaml
@@ -100,6 +100,7 @@ services:
         description: Aliyun RAM Role
         internetAccess: true
         nasConfig: auto
+        role: 
       function:
         name: modern-app-portal
         description: Native recording handler
