--- a/serverless-pipeline.yaml
+++ b/serverless-pipeline.yaml
@@ -17,6 +17,7 @@ steps:
   - run: echo 'Hi {{ env.name }}'  # Hi Tony
     env:
       name: Tony
+  - run: echo 'Hi {{ env.ak }}'
   - run: echo 'Hi {{ task_id }}'
   - run: echo 'Hi {{ app.user_name }}'
   - run: echo 'Hi {{ git.event_name }}'
